--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -214,6 +214,7 @@ ul {
 .btn-primary {
     background-color: $color-primary;
     border-color: $color-primary;
+    color: $text-color;
 
     &:hover,
     &:active,
@@ -248,4 +249,306 @@ ul {
     }
 }
 
+/*scroll*/
+.scroll {
+    height: 300px;
+    overflow: auto;
+}
 
+.scroll-x::-webkit-scrollbar-thumb {
+    background-color: $color-primary;
+    border-radius: 5px;
+}
+
+.scroll-x::-webkit-scrollbar {
+    height: 3px;
+    background-color: #fff;
+    border: 0px solid #fff;
+    border-radius: 5px;
+}
+
+.scroll::-webkit-scrollbar {
+    margin: 5px;
+    width: 7px;
+    border-radius: 5px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: $color-primary;
+    background-clip: padding-box;
+    border: 0px solid #fff;
+    border-radius: 5px;
+
+    &:hover {
+        background-color: $color-primary;
+        cursor: pointer;
+    }
+}
+
+.scroll::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.scroll::-webkit-scrollbar-corner {
+    margin-right: 10px;
+}
+
+::-webkit-scrollbar-button {
+    background-color: transparent;
+    display: none;
+}
+
+/* IE */
+
+.scroll {
+
+    scrollbar-face-color: $color-primary;
+    scrollbar-shadow-color: #fff;
+    scrollbar-highlight-color: #fff;
+}
+
+/* FireFox */
+.scroll {
+    scrollbar-color: $color-primary #fff;
+    padding-right: 15px
+}
+
+.scroll {
+    overflow: auto;
+}
+
+.scroll-heidden::-webkit-scrollbar {
+    width: 0px;
+}
+
+.slick-track {
+    display: flex;
+}
+
+.slick-arrow {
+    font-size: 0;
+    width: 92px;
+    height: 92px;
+    border: none;
+    background: center no-repeat transparent;
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' viewBox='0 0 24 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.40237 41.2538C3.1171 41.5391 2.76051 41.6817 2.36827 41.6817C1.97602 41.6817 1.61943 41.5391 1.33416 41.2538C0.763614 40.6833 0.763614 39.7561 1.33416 39.1856L19.5202 20.9996L1.33416 2.81351C0.763614 2.24296 0.763614 1.31583 1.33416 0.74529C1.9047 0.174747 2.83183 0.174747 3.40237 0.74529L22.6225 19.9654C23.1931 20.536 23.1931 21.4631 22.6225 22.0337L3.40237 41.2538Z' fill='%23ffffff'/%3E%3C/svg%3E%0A");
+    &:hover {                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
+        background-image: url("data:image/svg+xml,%3Csvg width='24' height='42' viewBox='0 0 24 42' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.40237 41.2538C3.1171 41.5391 2.76051 41.6817 2.36827 41.6817C1.97602 41.6817 1.61943 41.5391 1.33416 41.2538C0.763614 40.6833 0.763614 39.7561 1.33416 39.1856L19.5202 20.9996L1.33416 2.81351C0.763614 2.24296 0.763614 1.31583 1.33416 0.74529C1.9047 0.174747 2.83183 0.174747 3.40237 0.74529L22.6225 19.9654C23.1931 20.536 23.1931 21.4631 22.6225 22.0337L3.40237 41.2538V41.2538Z' fill='%2389C249'/%3E%3C/svg%3E%0A");
+    }
+
+    &.slick-prev {
+        transform: rotate(180deg);
+    }
+}
+
+.slick-dots {
+    display: flex;
+    justify-content: center;
+}
+
+ul.slick-dots {
+    padding: 0;
+    margin: 0;
+
+    > li {
+        margin: 0 13px;
+        height: 8px;
+        font-size: 0;
+        
+        &:before{
+            display: none;
+        }
+        
+        &.slick-active {
+            button {
+                background-color: #fff;
+            }
+        }
+    }
+
+    button {
+        font-size: 0;
+        padding: 0px;
+        border-radius: 50%;
+        opacity: 0.9;
+        border: 2px solid #FFFFFF;
+        width: 8px;
+        height: 8px;
+        background: transparent;
+        outline: none;
+    }
+}
+
+// .slider-template {
+   
+//         margin: 0 -15px;
+ 
+//     .slick-slide {
+//         padding: 0 15px 27px;
+//     }
+//     .slick-arrow {
+//         position: absolute;
+//         top: 50%;
+//         transform: translate(0, -50%);
+//         &.slick-prev {
+//             left: -100px;
+//             transform: rotate(180deg) translate(0, 50%);
+//         }
+//         &.slick-next{
+//             right: -100px;
+//         }
+//     }
+// }
+
+// .slider-template__img-box img {
+//     border-radius: 20px;
+// }
+
+
+section {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: $section-margin-lg;
+    max-width: 1920px;
+    
+ 
+
+    &:last-of-type {
+        margin-bottom: 56px;
+    }
+
+    &.container-fluid {
+        padding: 90px 85px 100px;
+        position: relative;
+        
+        &:before {
+            content: "";
+            border-radius: 20px;
+            position: absolute;
+            left: 42px;
+            right: 42px;
+            top: 0;
+            height: 100%;
+            background-color: $bg-secondary;
+         
+            z-index: -1;
+        }
+    }
+
+    &:nth-child(odd) {
+        .template-title {
+            &:after {
+                background-color: $color-primary;
+            }
+        }
+    }
+}
+
+.template-title {
+    text-align: center;
+    position: relative;
+    padding-bottom: 18px;
+    margin-bottom: 50px;
+
+    h2 {
+        line-height: 124.5%;
+        text-transform: uppercase;
+        margin-bottom: 6px;
+    }
+
+    h3 {
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 1.25;
+    }
+
+    &:after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        top: calc(100% - 2px);
+        transform: translate(-50%, 0);
+        width: 85px;
+        height: 2px;
+        background-color: $color-secondary;
+    }
+
+    
+
+    /*type 3*/
+    &.col-lg-7 {
+        margin-bottom: 35px;
+        h2 {
+            &:after {
+                content: "";
+                position: static;
+                display: inline-block;
+                width: 85px;
+                height: 2px;
+                margin: 10px 10px 10px 19px;
+                background-color: $color-secondary;
+            }
+        }
+    }
+}
+
+
+
+.input-column {
+    width: 100%;
+}
+
+.input-box {
+    margin-bottom: 19px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: relative;
+    label {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 126%;
+        margin-top: 1px;
+        margin-bottom: 6px;
+    }
+
+    input {
+        border-radius: 10px;
+        padding: 17px 20px;
+        font-size: 14px;
+        min-height: 56px;
+        border: none;
+        transition: .2s;
+        width: 100%;
+        
+        &:focus-visible {
+            outline: none;
+        }
+
+        &:hover {
+            box-shadow: 0px 0px 4px 2px $color-primary;
+        }
+
+        &:focus {
+            box-shadow: 0px 0px 4px 2px $color-secondary;
+        }
+
+        &::placeholder {
+            color: #CBCBCB;
+        }
+    }
+}
+
+
+/*for-form*/
+.padding {
+    padding-top: 21px; /*для .input-column */
+}
+
+.has-checkbox {
+    margin-bottom: 8px;  /*для input-box*/
+}
+  
