--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -1,6 +1,39 @@
 .header {
+    padding: 25px 0 39px;
+
     .container{
         display: flex;
-        
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__logo {
+        max-width: 172px;
+        img {
+            max-height: 60px;
+        }
+    }
+    
+    &__navigation {
+        width: 100%;
+        max-width: 558px;
+        display: flex;
+        justify-content: space-between;
+        margin: 4px 0 0 0;
+
+        a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px;
+            &:hover {
+                 color: $color-primary;
+             }
+        }
     }
 }
+.btn {
+    padding: 13px 22px;
+}
+
+
+
