--- a/dev/templates/header.html
+++ b/dev/templates/header.html
@@ -1,8 +1,8 @@
 <header class="header">
    <div class="container">
-    <div class="header__logo">
-        <img src="assets/img/logo.svg" alt="logo">
-    </div>
+    <a href="index.html" class="header__logo"> 
+        <img src="assets/img/logo.svg" class="img-fluid" alt="logo">
+    </a>
     <nav class="header__navigation">
         <a href="#" class="header__navigation-item">Цены и сроки</a>
         <a href="#" class="header__navigation-item">Услуги</a>
@@ -13,4 +13,6 @@
     <button class="btn btn-primary">Оставить заявку</button>
    </div>
 </header>
+
+
 
