--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -9,6 +9,7 @@
 
     &__logo {
         max-width: 172px;
+        width: 100%;
         img {
             max-height: 60px;
         }
@@ -16,19 +17,25 @@
     
     &__navigation {
         width: 100%;
-        max-width: 622px;
         display: flex;
-        justify-content: space-between;
-        margin: 4px 0 0 0;
 
-        a {
+        &-list {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 602px;
+            width: 100%;
+            margin: 4px auto 0;;
+            padding: 0;
+        }
+        &-item-link {
             color: #fff;
             text-decoration: none;
-            padding: 10px;
             &:hover {
-                 color: $color-primary;
-             }
+                color:$color-primary;
+            }
         }
+        
     }
 }
 .btn {
