--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -37,9 +37,13 @@
         }
         
     }
-}
-.btn {
+    .btn {
     padding: 13px 22px;
+    }
+}
+
+.header__navigation {
+    display: none;
 }
 
 
