--- a/dev/sass/header.scss
+++ b/dev/sass/header.scss
@@ -46,13 +46,17 @@
     display: none;
     &.show{
         display: flex;
+        margin-top: -15px;
     }
 }
+
 
 .btn-burger {
     padding: 1.3px 13.5px;
     border: none;
     position: relative;
+    margin-top: -4px;
+    margin-right: 6px;
 
     &:before,
     &:after {
