--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -8,17 +8,35 @@
         background-color: #363A4D;
         .btn {
             justify-content: center;
+            width: 295px;
+            height: 68px;
+            padding: 0;
+            margin: 0 auto;
+            display: block;
+            margin-top: -14px;
+           
         }
     }
 
     .header__navigation-list {
         flex-direction: column;
         margin-bottom: 48px;
+        height: 100%;
+        max-height: 309px;
+        margin-top: 19px;
+       
     }
     .header__navigation-item-link {
         font-size: 24px;
         line-height: 222%;
     }
+    a.header__logo {
+        max-width: 126px;
+        max-height: 35px;
+        margin-top: -6px;
+        margin-left: 5px;
+    }
+   
 }
 
 
