--- a/dev/sass/variables.scss
+++ b/dev/sass/variables.scss
@@ -5,6 +5,9 @@ $bg-primary:#282B38;
 $bg-secondary: #363A4D;
 $text-color: #fff;
 
+$container-padding: 15px;
+$conteiner-mobile-padding: 20px;
+
 ///fonts///
 $font-primary: "ProximaNova";
 $section-margin-lg: 100px;
