feat: first-screen done

--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -98,8 +98,8 @@ ul {
 
 .container {
     max-width: 1170px;
-    padding-right: $container-padding;
-    padding-left: $container-padding;
+    padding-right: 15px;
+    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
