--- a/dev/sass/media/_media_max_width1024.scss
+++ b/dev/sass/media/_media_max_width1024.scss
@@ -63,8 +63,8 @@
                 flex-direction: column;
                 align-items: center;
                 text-align: center;
-                padding: 0;
-                z-index: 1;
+                padding: 0; z-index: 1;
+                
             }
         }
         .btn-lg {
