--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -98,10 +98,11 @@ ul {
 
 .container {
     max-width: 1170px;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: $container-padding;
+    padding-left: $container-padding;
     margin-right: auto;
     margin-left: auto;
+    
 }
 .container-xxl {
     max-width: 1850px; /*or 1820px???? =)*/
