--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -435,7 +435,45 @@ ul.slick-dots {
 //     border-radius: 20px;
 // }
 
+.charter {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: $section-margin-lg;
+    max-width: 1920px;
+    
+ 
 
+    &:last-of-type {
+        margin-bottom: 56px;
+    }
+
+    &.container-fluid {
+        padding: 90px 85px 100px;
+        position: relative;
+        
+        &:before {
+            content: "";
+            border-radius: 20px;
+            position: absolute;
+            left: 42px;
+            right: 42px;
+            top: 0;
+            height: 100%;
+            background-color: $bg-secondary;
+         
+            
+        }
+    }
+
+    &:nth-child(odd) {
+        .template-title {
+            &:after {
+                background-color: $color-primary;
+            }
+        }
+    }
+}
 section {
     margin-top: 0;
     margin-left: auto;
