--- a/dev/templates/calculation.html
+++ b/dev/templates/calculation.html
@@ -3,6 +3,6 @@
     <div class="template-title col-lg-7">
         <h2>Получить рассчет стоимости доставки вашего груза</h2>
     </div>
-    
+    @@include('calculation-form.html')
 </div>
 </section>
