feat: calculation done

--- a/dev/templates/calculation-form.html
+++ b/dev/templates/calculation-form.html
@@ -48,7 +48,7 @@
         <div class="input-column">
             <div class="input-box">
                 <div id="file-name">
-                    Фотография
+                    Фотография.jpeg
                 </div>
                 <input class="input-file" id="fileInput" name="fileInput" type="file">
                 <label for="fileInput">Загрузить фото товара</label>
