--- a/dev/sass/calculation.scss
+++ b/dev/sass/calculation.scss
@@ -1,70 +1,94 @@
-.calculation {
-    @extend .charter;
-}
 
-.calculation-form {
-    max-width: 626px;
-    background-color: $bg-secondary;
-    padding: 43px 50px 61px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    
-}
-.input-row {
-    display: flex;
-    gap: 30px;
-  }
-    .input-column {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    
-  }
-
-    .input-box {
-    position: relative;
-    margin-bottom: 19px;
-  }
-
-    .input-file {
-    width: 100%;
-    margin: 0;
-
-    cursor: pointer;
-    opacity: 0;
-  }
-    .input-file {
-
-        + label {
-             position: absolute;
-             top: 24px;
-             left: 0;
-             width: 100%;
-             height: 60px;
-             border-radius: 10px;
-             border: 1px dashed rgba(255, 255, 255, 0.26);
-             display: flex;
-             align-items: center;
-             justify-content: center;
-             cursor: pointer;
-             &:hover {
-                 border-color: $color-secondary;
-                 color: $color-secondary;
-             }
-         } 
-    }
-         
-         .input-column {
-             .btn-lg {
-                 margin-right: auto;
-             }
-        }
-         
-         .column-checkbox {
-              padding-top: 23px;
-            
-         }
          // .input-box label {
          //     margin-bottom: -12px;
          // }
+
+         .calculation {
+          @extend .charter;
+      }
+      
+      .calculation-row {
+          display: flex;
+          align-items: flex-start;
+      }
+      
+      .calculation-form {
+          min-width: 626px;
+          background-color: $bg-secondary;
+          padding: 48px 50px 61px;
+          border-radius: 20px;
+          display: flex;
+          flex-direction: column;
+          
+      }
+      
+      .input-row {
+          display: flex;
+          gap: 30px;
+      }
+      
+      .input-column {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          
+      }
+      
+      .input-box {
+          position: relative;
+      }
+      
+      .input-file{
+          width: 100%;
+          margin: 0;
+        
+          cursor: pointer;
+          opacity: 0;
+        }
+        
+       
+        
+       
+      .input-file{
+      
+          + label {
+              position: absolute;
+              left: 0;
+              top: 33px;
+              width: 100%;
+              height: 43px;
+              border-radius: 10px;
+              border: 1px dashed rgba(255, 255, 255, 0.26);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              cursor: pointer;
+              &:hover {
+                  border-color: $color-secondary;
+                  color: $color-secondary;
+              }
+      } 
+      }
+      
+      .input-column {
+          .btn-lg {
+              margin-right: auto;
+          }
+      }
+      
+      .column-checkbox {
+           padding-top: 18px;
+           
+      }
+      #file-name {
+          font-size: 15px;
+          font-weight: 400;
+      }
+      // .input-box label {
+      //     margin-bottom: -12px;
+      // }
+      
+       
+      .calculation-decoration {
+          margin: -180px 0 0 -28px;
+      }
