--- a/dev/sass/global.scss
+++ b/dev/sass/global.scss
@@ -575,7 +575,7 @@ section {
 }
 
 .input-box {
-    margin-bottom: 19px;
+    //margin-bottom: 19px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
