--- a/dev/sass/calculation.scss
+++ b/dev/sass/calculation.scss
@@ -19,6 +19,7 @@
           border-radius: 20px;
           display: flex;
           flex-direction: column;
+          gap: 20px;
           
       }
       
@@ -31,6 +32,7 @@
           width: 100%;
           display: flex;
           flex-direction: column;
+          gap: 16px;
           
       }
       
@@ -78,6 +80,7 @@
       
       .column-checkbox {
            padding-top: 18px;
+           gap: 7px;
            
       }
       #file-name {
